fixed navbar overlapping with last article card

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -99,7 +99,8 @@ a {
 
 //SHOW ARTICLES
 .article-container {
-  height: 100%;
+  // height: 100%;
+  margin-bottom: 5em;
   .row {
     max-width: 100%;
   }
